main files and nav

--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Geiciane Barham</title>
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+
+  <body>
+    <header>
+      <nav class="nav-ul">
+
+        <strong class="dev-name">Geiciane Barham</strong>
+        <ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="#" target="_blank">Resume</a></li>
+          <li><a href="#contact"> Contact </a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li class="send-message-link"><a href="/contact">Send a message</a></li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
