sketch and images files

--- a/index.html
+++ b/index.html
@@ -1,25 +1,228 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Geiciane Barham</title>
-    <link rel="stylesheet" href="css/main.css" />
-  </head>
 
-  <body>
-    <header>
-      <nav class="nav-ul">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Geiciane Barham</title>
+  <link rel="stylesheet" href="css/main.css" />
+</head>
 
-        <strong class="dev-name">Geiciane Barham</strong>
-        <ul>
-          <li><a href="#about">About</a></li>
-          <li><a href="#" target="_blank">Resume</a></li>
-          <li><a href="#contact"> Contact </a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li class="send-message-link"><a href="/contact">Send a message</a></li>
-        </ul>
-      </nav>
-    </header>
-  </body>
+<body>
+  <header>
+    <nav class="nav-ul">
+      <strong class="dev-name">Geiciane Barham</strong>
+      <ul class="desktop-nav">
+        <li><a href="#about">About</a></li>
+        <li><a href="#" target="_blank">Resume</a></li>
+        <li><a href="#contact"> Contact </a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li class="send-message-link"><a href="/contact">Send a message</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section>
+      <div class="hero-image">
+        <div class="hero-text-container">
+          <h1 class="name-main">
+            <img src="./assets/images/doodles/artowork-hero.png" alt="" aria-hidden="true" width="400px" />
+            Geiciane <br> Barham
+            <img src="./assets/images/doodles/artwork 0-03.png" alt="" aria-hidden="true" width="400px" />
+          </h1>
+          <strong class="profession">
+            Front End Developer & <br> Web Accessibility Specialist
+          </strong>
+          <a class="button-form-contact" href="#">Contact</a>
+        </div>
+        <img class="geici-image" src="./assets/images/profile/file.png"
+          alt="Geiciane Barham, a woman with long hair and purple shirt" />
+      </div>
+    </section>
+
+    <section>
+      <div class="about-me">
+        <img class="technology-image" src="./assets/images/technologies/tech-less-real.jpg" alt="" aria-hidden="true" />
+        <div class="about-me-text-container">
+          <strong id="typewriter" class="typewriter"></strong>
+          <p>
+            Detail-oriented Full Stack Web Developer specializing in front-end development and web accessibility.
+            Experienced with single-page applications and Adobe Experience Manager (AEM). Fast learner with a background
+            in English teaching, enhancing problem-solving, time management, communication, and teamwork skills to
+            deliver high-quality, accessible web solutions.
+          </p>
+          <p>
+            Some of the technologies I have used include:
+          </p>
+          <ul class="technology-list">
+            <li>
+              <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="28pt" height="28pt"
+                viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet">
+                <g transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)" fill="#281a17" stroke="none">
+                  <path
+                    d="M768 773 l-328 -328 -128 128 -127 127 -78 -78 -77 -78 183 -182 c182 -181 184 -182 227 -182 l44 0 386 385 385 385 -75 75 c-41 41 -77 75 -80 75 -3 0 -152 -147 -332 -327z" />
+                </g>
+              </svg>HTML, CSS, and JavaScript, React, Handlebars, Sass, Less, Bootstrap
+            </li>
+
+            <li>
+              <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="28pt" height="28pt"
+                viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet">
+                <g transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)" fill="#281a17" stroke="none">
+                  <path
+                    d="M768 773 l-328 -328 -128 128 -127 127 -78 -78 -77 -78 183 -182 c182 -181 184 -182 227 -182 l44 0 386 385 385 385 -75 75 c-41 41 -77 75 -80 75 -3 0 -152 -147 -332 -327z" />
+                </g>
+              </svg>Express, Node.js
+            </li>
+            <li>
+              <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="28pt" height="28pt"
+                viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet">
+                <g transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)" fill="#281a17" stroke="none">
+                  <path
+                    d="M768 773 l-328 -328 -128 128 -127 127 -78 -78 -77 -78 183 -182 c182 -181 184 -182 227 -182 l44 0 386 385 385 385 -75 75 c-41 41 -77 75 -80 75 -3 0 -152 -147 -332 -327z" />
+                </g>
+              </svg>GraphQL, SQL, MySQL, Sequelize, MongoDB, REST APIs
+            </li>
+            <li>
+              <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="28pt" height="28pt"
+                viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet">
+                <g transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)" fill="#281a17" stroke="none">
+                  <path
+                    d="M768 773 l-328 -328 -128 128 -127 127 -78 -78 -77 -78 183 -182 c182 -181 184 -182 227 -182 l44 0 386 385 385 385 -75 75 c-41 41 -77 75 -80 75 -3 0 -152 -147 -332 -327z" />
+                </g>
+              </svg>Adobe Experience Manager, Content Management Systems
+            </li>
+            <li>
+              <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="28pt" height="28pt"
+                viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet">
+                <g transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)" fill="#281a17" stroke="none">
+                  <path
+                    d="M768 773 l-328 -328 -128 128 -127 127 -78 -78 -77 -78 183 -182 c182 -181 184 -182 227 -182 l44 0 386 385 385 385 -75 75 c-41 41 -77 75 -80 75 -3 0 -152 -147 -332 -327z" />
+                </g>
+              </svg>WCAG (Web Content Accessibility Guidelines)
+            </li>
+            <li>
+              <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="28pt" height="28pt"
+                viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet">
+                <g transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)" fill="#281a17" stroke="none">
+                  <path
+                    d="M768 773 l-328 -328 -128 128 -127 127 -78 -78 -77 -78 183 -182 c182 -181 184 -182 227 -182 l44 0 386 385 385 385 -75 75 c-41 41 -77 75 -80 75 -3 0 -152 -147 -332 -327z" />
+                </g>
+              </svg>ARIA (Accessible Rich Internet Applications) and other elements to enhance web accessibility
+            </li>
+            <li>
+              <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="28pt" height="28pt"
+                viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet">
+                <g transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)" fill="#281a17" stroke="none">
+                  <path
+                    d="M768 773 l-328 -328 -128 128 -127 127 -78 -78 -77 -78 183 -182 c182 -181 184 -182 227 -182 l44 0 386 385 385 385 -75 75 c-41 41 -77 75 -80 75 -3 0 -152 -147 -332 -327z" />
+                </g>
+              </svg>NVDA, JAWS, and other screen readers for testing web accessibility
+            </li>
+            <li>
+              <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="28pt" height="28pt"
+                viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet">
+                <g transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)" fill="#281a17" stroke="none">
+                  <path
+                    d="M768 773 l-328 -328 -128 128 -127 127 -78 -78 -77 -78 183 -182 c182 -181 184 -182 227 -182 l44 0 386 385 385 385 -75 75 c-41 41 -77 75 -80 75 -3 0 -152 -147 -332 -327z" />
+                </g>
+              </svg>GDPR compliance expertise in JavaScript and data privacy principles
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="projects-section">
+      <h2>Projects</h2>
+      <div class="projects-grid">
+
+        <!-- card 1 -->
+        <div class="project-card">
+          <div class="image-container">
+            <div class="image-wrapper">
+              <img src="./assets/images/project/coffee-example.png" alt="Coffee Project">
+            </div>
+          </div>
+          <div class="card-text-container">
+            <h3>Caffien Lisatae srunnq</h3>
+            <p>Western coffi and teea bran loovreiscasses and the bes tea solittes from comss panies and more ...</p>
+            <button>Mento</button>
+          </div>
+        </div>
+
+        <!-- card 2 -->
+        <div class="project-card-brown">
+          <div class="image-container">
+            <div class="image-wrapper">
+              <img src="./assets/images/project/coffee-example.png" alt="Coffee Project">
+            </div>
+          </div>
+          <div class="card-text-container">
+            <h3>Caffien Lisatae srunnq</h3>
+            <p>Western coffi and teea bran loovreiscasses and the bes tea solittes from comss panies and more ...</p>
+            <button>Mento</button>
+          </div>
+        </div>
+
+        <!-- card 3 -->
+        <div class="project-card">
+          <div class="image-container">
+            <div class="image-wrapper">
+              <img src="./assets/images/project/coffee-example.png" alt="Coffee Project">
+            </div>
+          </div>
+          <div class="card-text-container">
+            <h3>Caffien Lisatae srunnq</h3>
+            <p>Western coffi and teea bran loovreiscasses and the bes tea solittes from comss panies and more ...</p>
+            <button>Mento</button>
+          </div>
+        </div>
+
+        <!-- card 4 -->
+        <div class="project-card-brown">
+          <div class="image-container">
+            <div class="image-wrapper">
+              <img src="./assets/images/project/coffee-example.png" alt="Coffee Project">
+            </div>
+          </div>
+          <div class="card-text-container">
+            <h3>Caffien Lisatae srunnq</h3>
+            <p>Western coffi and teea bran loovreiscasses and the bes tea solittes from comss panies and more ...</p>
+            <button>Mento</button>
+          </div>
+        </div>
+
+        <!-- card 5 -->
+        <div class="project-card-pink">
+          <div class="image-container">
+            <div class="image-wrapper">
+              <img src="./assets/images/project/coffee-example.png" alt="Coffee Project">
+            </div>
+          </div>
+          <div class="card-text-container">
+            <h3>Caffien Lisatae srunnq</h3>
+            <p>Western coffi and teea bran loovreiscasses and the bes tea solittes from comss panies and more ...</p>
+            <button>Mento</button>
+          </div>
+        </div>
+
+        <!-- card 6 -->
+        <div class="project-card-brown">
+          <div class="image-container">
+            <div class="image-wrapper">
+              <img src="./assets/images/project/coffee-example.png" alt="Coffee Project">
+            </div>
+          </div>
+          <div class="card-text-container">
+            <h3>Caffien Lisatae srunnq</h3>
+            <p>Western coffi and teea bran loovreiscasses and the bes tea solittes from comss panies and more ...</p>
+            <button>Mento</button>
+          </div>
+        </div>
+    </section>
+  </main>
+  <script src="./js/index.js"></script>
+</body>
+
 </html>
