--- a/index.html
+++ b/index.html
@@ -10,14 +10,29 @@
 
 <body>
   <header>
+
+
+
     <nav class="nav-ul">
       <strong class="dev-name">Geiciane Barham</strong>
+
+      <ul class="mobile-nav">
+        <li><button class="mobile-nav-button"><svg width="40" height="40" viewBox="0 0 40 40"
+              xmlns="http://www.w3.org/2000/svg">
+              <g transform="scale(-1, 1) translate(-40, 0)">
+                <rect x="10" y="18" width="25" height="4" />
+                <rect x="15" y="26" width="20" height="4" />
+                <rect x="5" y="10" width="30" height="4" />
+              </g>
+            </svg></button></li>
+      </ul>
       <ul class="desktop-nav">
         <li><a href="#about">About</a></li>
         <li><a href="#" target="_blank">Resume</a></li>
         <li><a href="#contact"> Contact </a></li>
         <li><a href="#projects">Projects</a></li>
         <li class="send-message-link"><a href="/contact">Send a message</a></li>
+
       </ul>
     </nav>
   </header>
@@ -26,10 +41,19 @@
       <div class="hero-image">
         <div class="hero-text-container">
           <h1 class="name-main">
-            <img src="./assets/images/doodles/artowork-hero.png" alt="" aria-hidden="true" width="400px" />
+            <img class="hero-decoration" src="./assets/images/doodles/gold-thicker-up.png" alt="" aria-hidden="true" />
             Geiciane <br> Barham
-            <img src="./assets/images/doodles/artwork 0-03.png" alt="" aria-hidden="true" width="400px" />
+            <!-- <img class="hero-decoration" src="./assets/images/doodles/gold-bottom.png" alt="" aria-hidden="true"/> -->
+
           </h1>
+
+          <div class="divider">
+            <div class="line"></div>
+            <svg class="diamond" width="20" height="20" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <rect x="6" y="6" width="12" height="12" transform="rotate(45 12 12)" fill="#d6b577" />
+            </svg>
+            <div class="line"></div>
+          </div>
           <strong class="profession">
             Front End Developer & <br> Web Accessibility Specialist
           </strong>
@@ -56,7 +80,7 @@
           </p>
           <ul class="technology-list">
             <li>
-              <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="28pt" height="28pt"
+              <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="25px" height="25px"
                 viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet">
                 <g transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)" fill="#281a17" stroke="none">
                   <path
@@ -66,7 +90,7 @@
             </li>
 
             <li>
-              <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="28pt" height="28pt"
+              <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="25px" height="25px"
                 viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet">
                 <g transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)" fill="#281a17" stroke="none">
                   <path
@@ -75,7 +99,7 @@
               </svg>Express, Node.js
             </li>
             <li>
-              <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="28pt" height="28pt"
+              <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="25px" height="25px"
                 viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet">
                 <g transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)" fill="#281a17" stroke="none">
                   <path
@@ -84,7 +108,7 @@
               </svg>GraphQL, SQL, MySQL, Sequelize, MongoDB, REST APIs
             </li>
             <li>
-              <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="28pt" height="28pt"
+              <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="25px" height="25px"
                 viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet">
                 <g transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)" fill="#281a17" stroke="none">
                   <path
@@ -93,7 +117,7 @@
               </svg>Adobe Experience Manager, Content Management Systems
             </li>
             <li>
-              <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="28pt" height="28pt"
+              <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="25px" height="25px"
                 viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet">
                 <g transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)" fill="#281a17" stroke="none">
                   <path
@@ -102,7 +126,7 @@
               </svg>WCAG (Web Content Accessibility Guidelines)
             </li>
             <li>
-              <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="28pt" height="28pt"
+              <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="25px" height="25px"
                 viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet">
                 <g transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)" fill="#281a17" stroke="none">
                   <path
@@ -111,7 +135,7 @@
               </svg>ARIA (Accessible Rich Internet Applications) and other elements to enhance web accessibility
             </li>
             <li>
-              <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="28pt" height="28pt"
+              <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="25px" height="25px"
                 viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet">
                 <g transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)" fill="#281a17" stroke="none">
                   <path
@@ -120,7 +144,7 @@
               </svg>NVDA, JAWS, and other screen readers for testing web accessibility
             </li>
             <li>
-              <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="28pt" height="28pt"
+              <svg aria-hidden="true" version="1.0" xmlns="http://www.w3.org/2000/svg" width="25px" height="25px"
                 viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet">
                 <g transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)" fill="#281a17" stroke="none">
                   <path
@@ -221,6 +245,31 @@
           </div>
         </div>
     </section>
+    <footer class="footer">
+      <strong>Get in touch!</strong>
+      <ul>
+        <li><a href="https://www.linkedin.com/in/your-profile" target="_blank" aria-label="check my linkedin">
+
+            <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <path
+                d="M22.23 0H1.77A1.77 1.77 0 000 1.77v20.46A1.77 1.77 0 001.77 24h20.46A1.77 1.77 0 0024 22.23V1.77A1.77 1.77 0 0022.23 0zM7.12 20.45H3.56V9h3.56v11.45zM5.34 7.5a2.07 2.07 0 110-4.14 2.07 2.07 0 010 4.14zM20.45 20.45h-3.56v-5.61c0-1.34-.03-3.06-1.86-3.06-1.86 0-2.15 1.45-2.15 2.95v5.72H9.32V9h3.42v1.56h.05c.48-.91 1.65-1.86 3.4-1.86 3.63 0 4.3 2.39 4.3 5.5v6.25z" />
+            </svg>
+          </a></li>
+        <li><a href="https://github.com/your-profile" target="_blank" aria-label="check my github">
+            <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <path
+                d="M12 0C5.37 0 0 5.37 0 12c0 5.3 3.438 9.8 8.205 11.385.6.11.82-.26.82-.577 0-.285-.01-1.04-.015-2.04-3.338.725-4.042-1.61-4.042-1.61-.546-1.385-1.333-1.755-1.333-1.755-1.09-.745.083-.73.083-.73 1.205.085 1.84 1.24 1.84 1.24 1.07 1.835 2.805 1.305 3.49.997.11-.775.42-1.305.76-1.605-2.665-.305-5.465-1.335-5.465-5.93 0-1.31.47-2.38 1.24-3.22-.125-.305-.54-1.525.115-3.18 0 0 1.01-.325 3.3 1.23a11.52 11.52 0 013-.405c1.02.005 2.04.14 3 .405 2.28-1.555 3.29-1.23 3.29-1.23.655 1.655.24 2.875.12 3.18.77.84 1.24 1.91 1.24 3.22 0 4.61-2.805 5.62-5.475 5.92.43.37.81 1.1.81 2.22 0 1.605-.015 2.895-.015 3.285 0 .315.21.69.825.57C20.565 21.795 24 17.295 24 12c0-6.63-5.37-12-12-12z" />
+            </svg>
+          </a></li>
+        <li><a href="mailto:geicianecosta43@gmail.com" aria-label="send me an email">
+            <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <path d="M12 12.713l11.985-8.713H.015L12 12.713zM12 13.787L.015 5.073v13.854h23.97V5.073L12 13.787z" />
+            </svg>
+          </a></li>
+      </ul>
+      <img class="corner-right-img" src="./assets/images/footer/pink-brown.png" alt="" aria-hidden="true" />
+
+    </footer>
   </main>
   <script src="./js/index.js"></script>
 </body>
